logs/error.log
  File "/root/yobot/src/client/yobotg.sh", line 2
    echo $$ > yobotg.pid
         ^
SyntaxError: invalid syntax
